# ffmpeg-gui

./: CMakeLists.txt  README.md  deploy.py
installer/config/: config.xml
src/: controller.cpp  controller.h  ffmpeg.cpp  ffmpeg.h  job.cpp  job.h  main.cpp  media.cpp  media.h  page.cpp  page.h  parser.cpp  parser.h  pythonscript.cpp  pythonscript.h  res.qrc  window.cpp  window.h  wizard.cpp  wizard.h
src/assets/: README.md
src/jobs/: batchconvert.cpp  batchconvert.h  concat.cpp  concat.h  convert.cpp  convert.h  splitchapter.cpp  splitchapter.h
src/media/: audio.cpp  audio.h  chapter.cpp  chapter.h  crop.h  stream.cpp  stream.h  subtitle.cpp  subtitle.h  video.cpp  video.h
src/pages/: mainpage.cpp  mainpage.h
src/widgets/: chapterselectorwidget.cpp  chapterselectorwidget.h  inputlistwidget.cpp  inputlistwidget.h  joblistwidget.cpp  joblistwidget.h  navbar.cpp  navbar.h  streamselectorwidget.cpp  streamselectorwidget.h  wizardlistwidget.cpp  wizardlistwidget.h
src/wizards/: batchconvertwizard.cpp  batchconvertwizard.h  concatwizard.cpp  concatwizard.h  convertwizard.cpp  convertwizard.h  splitchapterwizard.cpp  splitchapterwizard.h
